# Automated_Customer_Support_Email_Agent

./: .env.example  .gitignore  Automated_Customer_Support_Email_Agent.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample_faq.json  sample_orders.json  sample_policies.json
scripts/: init_db.sql  seed_knowledge_base.py  test_agent.py  test_email_api.py
src/support_agent/: __init__.py  config.py  main.py
src/support_agent/agent/: __init__.py  classifier.py  core.py  prompts.py  router.py
src/support_agent/agent/tools/: __init__.py  base.py  escalation.py  knowledge_base.py  shopify.py
src/support_agent/api/routes/: __init__.py  admin.py  email.py  health.py
src/support_agent/integrations/: openai_client.py
src/support_agent/integrations/database/: __init__.py  connection.py  models.py
src/support_agent/integrations/email/: __init__.py  parser.py
src/support_agent/integrations/shopify/: __init__.py  mock.py
src/support_agent/services/: __init__.py  email_processor.py  embedding.py  rag.py
